--- a/code/css/grid.html
+++ b/code/css/grid.html
@@ -8,11 +8,11 @@
     <style>
       .grid-ctn {
         display: grid;
-        grid-template-columns: 100px 200px 300px;
+        grid-template-columns: 100px 200px 500px;
         grid-template-rows: 100px 200px 300px;
         /* grid-row-gap: 20px;
         grid-column-gap: 20px; */
-        grid-gap: 20px;
+        grid-gap: 10px 20px;
       }
       .grid-item {
         /* width: 100px; */
