--- a/code/css/grid.html
+++ b/code/css/grid.html
@@ -6,25 +6,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grid</title>
     <style>
+      * {
+        box-sizing: border-box;
+      }
       .grid-ctn {
         display: grid;
-        grid-template-columns: 100px 200px 500px;
-        grid-template-rows: 100px 200px 300px;
-        /* grid-row-gap: 20px;
-        grid-column-gap: 20px; */
+        grid-template-columns: 100px 200px 300px;
+        grid-template-rows: 30px 40px 50px;
         grid-gap: 10px 20px;
       }
       .grid-item {
-        /* width: 100px; */
-        /* height: 100px; */
-        background: #000;
+        background: #f006;
         border: 1px solid #f00;
         color: #fff;
       }
       .item4 {
-        background: #0f0;
-        grid-row-start: 2;
-        grid-row-end: 6;
+        background: #0f06;
+        grid-row: 2 / 6;
+      }
+      .wrapper {
+        max-width: 940px;
+        margin: 0 auto;
+      }
+
+      .wrapper > div {
+        border: 2px solid rgb(233, 171, 88);
+        border-radius: 5px;
+        background-color: rgba(233, 171, 88, 0.5);
+        padding: 1em;
+        color: #d9480f;
+      }
+
+      .wrapper {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 10px;
+        grid-auto-rows: minmax(50px, auto);
+      }
+      .one {
+        grid-column: 1 / 3;
+        grid-row: 1;
+      }
+      .two {
+        grid-column: 2 / 4;
+        grid-row: 1 / 3;
+      }
+      .three {
+        grid-row: 2 / 5;
+        grid-column: 1;
+      }
+      .four {
+        grid-column: 3;
+        grid-row: 3;
+      }
+      .five {
+        grid-column: 2;
+        grid-row: 2 / 4;
+      }
+      .six {
+        grid-column: 2 / 4;
+        grid-row: 3 / 5;
       }
     </style>
   </head>
@@ -43,6 +84,14 @@
       <div class="grid-item item10">item10</div>
       <div class="grid-item item11">item11</div>
       <!-- .grid-item.item$@12*6>{item$@12} -->
+    </div>
+    <div class="wrapper">
+      <div class="one">One</div>
+      <div class="two">Two</div>
+      <div class="three">Three</div>
+      <div class="four">Four</div>
+      <div class="five">Five</div>
+      <div class="six">Six</div>
     </div>
   </body>
 </html>
