--- a/code/draw/canvas/video/index.html
+++ b/code/draw/canvas/video/index.html
@@ -80,6 +80,7 @@
             // if (g > 100 && r > 100 && b < 43)  // video.ogv
             // 1.mp4 2.mp4
             // if (r < g && g > b)
+            // 将 alpha 通道置 0, 对应像素变为透明
             if (r < 100 && g > 100 && b < 130) frame.data[i * 4 + 3] = 0
           }
           this.ctx2.putImageData(frame, 0, 0)
